css/index.css
.projects-container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
    gap: 1rem;

    justify-items: center;
    align-items: center;

    margin: 2rem 0;
}

.projects-container a {
    text-decoration: none;
    color: inherit;
}

@media (max-width: 640px) {
    .projects-container {
        grid-template-columns: 1fr;
    }
}

.project-window {
    width: 18rem;
    height: 22rem;

    border-radius: 14%;
    border: 0.5px solid var(--heading-color);
}

.project-img {
    overflow: hidden;

    object-fit: contain;    

    height: 50%;
    width: 100%;

    border-radius: 15% 15% 0 0;
}

.project-img img {
    max-width: 100%;
    max-height: 100%;
}

.project-text {
    margin: 0.5rem;

    display: flex;
    flex-direction: column;
    justify-content: space-between;

    max-height: 90%;
}

.project-title {
    font-weight: bold;
}


/* *************** */

:root {
    --primary-color: #0d1117;
    --secondary-color: #14223a;
    --heading-color: #212529;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans","Liberation Sans",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
}

h1 {
    font-size: calc(1.375rem + 1.5vw);
    color: var(--heading-color);
}

h1, h2, h3, h4, h5 {
    font-weight: 500;
    line-height: 1.2;
    margin-bottom: 0.5rem
}

header {
    background-color: var(--primary-color);
    padding: 1rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
    max-width: 100%;
}

header img {
    height: 4rem;
    border-radius: 100%;
    border: 2px solid rgba(0, 255, 0, 0.693);
}

header img:hover {
    border: 2px solid rgb(0, 255, 0);
    transition: 250ms;
}

header nav {
    display: flex;
    gap: 40px;
    font-size: 1.4rem;
}

header a {
    color: white;
    font-weight: bold;
    text-decoration: none;
}

header a:hover {
    transition: ease;
    text-decoration: underline;
}

footer {
    background-color: var(--primary-color);
    color: white;
    font-weight: bold;
    text-align: center;
    position: relative;
    width: 100%;
    bottom: 0;
    margin-top: 2rem;
    padding: 2rem 0;
}

/* header img */
.head-img {
    justify-content: center;
    display: flex;
    max-width: 100%;
    overflow: hidden;
}

/* header main */
.intro {
    text-align: center;
    margin-top: 2rem;
    max-width: 100%;
}

.intro img {
    height: 25rem;
}

/* content block */
.content {
    align-items: center;
    text-align: center;
}

.apps-header {
    margin: 2rem auto;
}

.apps-header p {
    font-size: 1.2rem;
}

.apps-header img {
    height: 300px;
}

#credit-img {
    font-size: 0.9rem;
    color: rgb(48, 48, 48);
}

.stack {
    margin: 2rem auto;
}

.contact {
    margin: 4rem auto;
}

.contact a {
    text-decoration: none;
}

.contact a:hover {
    text-decoration: underline;
    transition: text-decoration 0.5s ease 0.2s;
}

/* ******************** */

.carousel {
    width: 100%;
    padding-top: 1rem;
    padding-bottom: 5rem;
    overflow: hidden;
    position: relative;
    white-space: nowrap;
}

.carousel-inner {
    width: auto;
    display: inline-block;
    animation: 10s runSlide infinite linear;
}

.carousel:hover .carousel-inner {
    animation-play-state: paused;
}

.carousel:before,
.carousel:after {
    position: absolute;
    top: 0;
    width: 10rem;
    height: 100%;
    content: "";
    z-index: 10;
}

.carousel:before {
    left: 0;
    background: linear-gradient(to left, rgba(0,0,0,0), white);
}

.carousel:after {
    right: 0;
    background: linear-gradient(to right, rgba(0,0,0,0), white);
}

.item {
    padding: 1rem 2rem;
    display: inline;
}

.item svg {
    height: 100px;
    width: 100px;
}

/* animation slide */
@keyframes runSlide {
    from {
        transform: translateX(0);
    }
    to {
        transform: translateX(-100%);
    }
}

